--- a/gen/js/package.json
+++ b/gen/js/package.json
@@ -2,6 +2,6 @@
   "type": "module",
   "dependencies": {
     "@3-/protoscript": "^0.0.48",
-    "i": "link:../../../web/lib/i"
+    "i": "link:../../../web/dist/i"
   }
 }
