--- a/gen/js/package.json
+++ b/gen/js/package.json
@@ -2,6 +2,6 @@
   "type": "module",
   "dependencies": {
     "@3-/protoscript": "^0.0.48",
-    "i": "link:../../../web/dist/i"
+    "u": "link:./node_modules/@3-/util"
   }
 }
