--- a/srv/Cargo.toml
+++ b/srv/Cargo.toml
@@ -22,6 +22,7 @@ static_ = "0.1.14"
 static_init = "1.0.3"
 tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
 req_ = { version = "0.1.27", features = ["cookie"] }
+dstr = { version = "0.1.3", features = ["dvec"] }
 
 [package.metadata.cargo-machete]
 ignored = ["pb-jelly", "pb", "mod"]
